# jnative

./: .gitignore  README.md  build.gradle
src/main/java/jnative/: JNativeCodeLoader.java
src/main/java/jnative/io/: AIO.java  EPoll.java
src/main/java/jnative/utils/: AllocatedNativeObject.java  JNativeUnsafe.java  NativeObject.java  Unsafe.java
src/main/native/: CMakeLists.txt  jnative.h
src/main/native/jnative/io/: aio.h  jnative_io_AIO.c  jnative_io_AIO.h  jnative_io_EPoll.h
src/test/java/jnative/io/: TestAIO.java
